src/styles/globals.css
@import "tailwindcss/tailwind.css";
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "RBYGSC";
  src: url("/fonts/RBYGSC.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "RSE";
  src: url("/fonts/RSE.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "BWB2W2";
  src: url("/fonts/BWB2W2.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

/* CSS custom properties / CSS variables = default light mode */
:root {
  --font-size: 1.3rem;
  --background-colour: oklch(95.51% 0 0);
  --text-colour: oklch(32.11% 0 0);
  --hover-bg-colour: oklch(57.74% 0.046 237.8);
  --hover-text-colour: oklch(100% 0 0);
  --input-bg-colour: oklch(100% 0 0);
  --input-border-colour: oklch(100% 0 0);
  --button-border-colour: oklch(57.74% 0.046 237.8);
  --box-arrow-colour: oklch(0% 0 0);
  --shadow-colour: oklch(0% 0 0);
  --header-shadow: oklch(0% 0 0 / 10%);
  --header-border: oklch(0% 0 0 / 10%);
}

html,
body {
  height: 100vh;
  padding: 0;
  margin: 0;
  font-family: "BWB2W2", Inter, -apple-system, BlinkMacSystemFont, Segoe UI,
    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
    sans-serif;
}

html,
body,
main,
header,
section {
  background-color: var(--background-colour);
  color: var(--text-colour);
}

a {
  color: inherit;
  text-decoration: none;
}

* {
  box-sizing: border-box;
  font-size: var(--font-size);
  line-height: 1em;
  font-family: "BWB2W2";
}

img {
  max-width: 100%;
  height: auto;
}

h1,
h2,
p,
ul {
  margin: 0;
}

ul {
  padding: 0;
  list-style: none;
}

button {
  padding: 0.5rem 1rem;
  font-weight: bold;
}

/* Pages */
main {
  padding: 1rem 0;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: center;
}

/* Box border with Pokeballs in corners */
.pokeball-box {
  position: relative;
  border: 5px double #000;
}
.pokeball {
  height: 12px;
  border: 2px solid #000;
  border-radius: 50%;
  background-color: #fafafa;
}
.pokeball,
.pokeball-upper {
  position: absolute;
  width: 12px;
}
.pokeball-upper {
  left: -2px;
  bottom: 4px;
  height: 6px;
  border-radius: 8px 8px 0 0;
  background-color: #000;
}
.top-left {
  top: -8px;
  left: -8px;
}
.top-right {
  top: -8px;
  right: -8px;
}
.bottom-left {
  bottom: -8px;
  left: -8px;
}
.bottom-right {
  bottom: -8px;
  right: -8px;
}

/* Hides the <select> down arrow */
.hide-select-arrow {
  appearance: none;
  -webkit-appearance: none;
  -moz-appearance: none;
}

.card__border {
  background-color: var(--input-bg-colour);
  /* Change border colour here */
  --border-colour: white;
  /* Chage border thickness here */
  --border-thickness: 4px;
  --offset-x: 0px;
  --offset-y: 1px;
  --blur-radius: 2px;
  --spread-radius: 0px;
  --shadow-colour: black;
  border: var(--border-thickness) solid var(--border-colour);
  border-radius: 0.4em;
  box-shadow: var(--offset-x) var(--offset-y) var(--blur-radius) var(--spread-radius) var(--shadow-colour), 
  inset var(--offset-x) var(--offset-y) var(--blur-radius) var(--spread-radius) var(--shadow-colour), 
  var(--offset-x) var(--offset-y) var(--blur-radius) var(--spread-radius) var(--shadow-colour),
  inset var(--offset-x) var(--offset-y) var(--blur-radius) var(--spread-radius) var(--shadow-colour);
}

/* Dark mode */
[data-theme="dark"] {
  --background-colour: oklch(21.36% 0.048 257.95);
  --text-colour: oklch(93.06% 0.041 211.84);
  --hover-bg-colour: oklch(58.14% 0.056 237.42);
  --hover-text-colour: oklch(100% 0 0);
  --input-bg-colour: oklch(15.36% 0.048 257.95);
  --input-border-colour: black;
  --box-arrow-colour: oklch(93.06% 0.041 211.84);
  --shadow-colour: oklch(93.06% 0.041 211.84);
  --header-shadow: oklch(100% 0 0 / 20%);
  --header-border: oklch(58.14% 0.056 237.42 / 50%);
  .card__border {
    --border-colour: black;
    --shadow-colour: white;
  }
}

